--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7816296610267780"
+     crossorigin="anonymous"></script>
   <script>
     (function(){
       emailjs.init("IuCv8xZ4_8k3ps9aH");
@@ -86,4 +88,5 @@
 <script src="JS/Wilaya.js"></script>
 <script src="JS/firebase.js" type="module"></script>
 </body>
+
 </html>
